tests/inputs/invalid/map-08.js
const map = [['x','-','B','-','@','-','A','-','c']];

module.exports = map;